[package]
name = "teleop_twist_keyboard_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "teleop_twist_keyboard_rust"
path = "src/teleop_twist_keyboard_rust.rs"

[dependencies]
rclrs = "*"
geometry_msgs = "*"
termios = "0.3.3"
lazy_static = "1.4"
anyhow = {version = "1", features = ["backtrace"]}